# obsidian_notes

./: .gitignore  2024-02-22 Dangerous Optimizations.md  C++ template trickery.md  Catch2 v3.md  Elden Ring - Strength Build.md  Math stuff.md  SEQLock.md  Vault Stats.md  cppcheck.md  pmccabe.md
.makemd/: fileCache.mdc  superstate.mdc
.obsidian/: app.json  appearance.json  community-plugins.json  graph.json  hotkeys.json  templates.json  types.json  workspace.json
Books/: Andrew Huang - Make Your Own Rules.md  Books.md  Emily Bache - The Coding Dojo Handbook.md  Kent Beck - Extreme Programming Explained.md  Mark Seeman - Code that fits in your head.md  Mik Kersten - Project To Product.md  Robert C Martin - The Clean Coder.md  Robert Nystrom - Game Programming Patterns.md  Scott Young - Ultralearning.md  Stone, Heed - Thanks for the feedback.md  Taze - Engineer's survival guide.md
Code Kata/: Code Kata.md  Leap Years.md
Conferences/: Conferences MOC.md  Conferences.md
Cooking/: 48h Chocolate chip Cookies.md  Chicken-Bowl with Rice and green beans.md  Lieblingsbrot.md  Manti.md  Oatmeal bars.md  Texan Chili.md  Türkische Hackpfanne.md
Exercises/: Exercises.md
Finances/: Dambacher Str.md
Gaming/: 2025-03-23_new_gaming_setup.md  Elden Ring - Strength Build.md  Elden Ring.md
Learnings/: 2024-02-22 Dangerous Optimizations.md  2024-04-05 remove virtual.md  2024-05-04_SWEC24.md  Learning Yearbook 2024.md  Learning Yearbook 2025.md  Learnlist.md  MathStuff.md  Obsidian.md  Retrospectives.md
Presentations/: Presentations.md  marp_template.md  run_marp.sh
Presentations/2025-06-17_PropertyBasedTesting/examples/: .clang-format  CMakeLists.txt
Presentations/2025-06-17_PropertyBasedTesting/examples/impl/: 01_string_concatenation.cpp  02_cool_sort.cpp  03_shrinking.cpp  04_vec2i.cpp  05_advanced.cpp  CMakeLists.txt  vec2i.h
Recipes/: 48h Chocolate chip Cookies.md  Lieblingsbrot.md  Manti.md  Müsliriegel.md  Oatmeal bars.md  Recipes.md  Spaetzle.md  Texan Chili.md  Turnip Soup.md  Türkische Hackpfanne.md
Talks/: 2025-03-27_DigitalBonusBayern.md  An Introduction To Tracy Profiler in C++.md  An Introduction to CLAP, a new Plug-In Standard.md  Ben Saks - What Volatile Means.md  Concurrency Improvements in C++20.md  Dangerous Optimizations.md  Dave Rowland - Pluginval.md  Drawing Level meter with JUCE.md  Jeff Garland - Cpp26 Preview.md  Johnathan Gopel - Remove virtual.md  Leading Change.md  Talks.md  (+9 more)
(+633 files in other folders)
